avoid handle on change too much

--- a/pages/docs/UI/custom_blocks.sass
+++ b/pages/docs/UI/custom_blocks.sass
@@ -1,6 +1,5 @@
 .block-wrapper
   align-items: center
-  margin-left: 45px
   position: relative
   padding-right: 10px
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif !important
@@ -12,9 +11,6 @@
       word-break: break-word
       overflow-wrap: break-word
       cursor: text
-  
-  .public-DraftStyleDefault-block
-    margin-left: 18px
 
   &:hover
     .block-wrapper--btns > .block-wrapper--btn
@@ -23,7 +19,7 @@
 .block-wrapper > .block-wrapper--btns
   display: flex
   position: absolute
-  left: -40px
+  left: -55px
   user-select: none
   caret-color: rgba(0, 0, 0, 0)
   width: 50px
