--- a/pages/docs/UI/editor_view.sass
+++ b/pages/docs/UI/editor_view.sass
@@ -11,11 +11,17 @@
   min-height: 0
   overflow-y: auto
 
-.DraftEditor-root
+.editor-view
   display: flex
-  flex-direction: column
+  justify-content: flex-end
+
+.DraftEditor-root
+  width: 92%
   min-height: 0
   height: auto
+  
+  .DraftEditor-editorContainer
+    width: 100%
 
 .public-DraftEditor-content
   padding-bottom: 200px
@@ -53,6 +59,3 @@
     background-color: rgba(244, 67, 54, 0.95)
     opacity: 0.8
 
-
-.public-DraftEditorPlaceholder-root
-  margin-left: 65px
